# stimulus_software

./: .gitignore  LICENSE  README.md  auditory_stim.py  config.yml  extract_compare_eeg  gui_stimulus.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  stimulus_software.spec
.github/workflows/: build.yml
auditory_stim/: auditory_stim.py  gui_stimulus.py  requirements.txt  static_sound.py  stimulus_package_notes.py
data/: patient_df.csv  patient_notes.csv  patient_records.csv
doc/: EEG-TBI_AuditoryStimulusDetails_063024.docx
lib/: analysis_manager.py  app.py  app_style.py  audio_stream_manager.py  auditory_stimulator.py  base_stim_handler.py  cmd_analysis.py  config.py  constants.py  edf_parser.py  edf_viewer.py  exceptions.py  logging_utils.py  notes.py  results_manager.py  state_manager.py  static_sound.py  stim_handlers.py  stims.py  tkinter_application.py  trial_handlers.py   trial_manager.py  trials.py
patient_data/: patient_df.csv  patient_history.csv  patient_notes.csv
patient_data/patients/: CON001a_20250424.csv  CON001a_20250430.csv  CON001a_20250603.csv  CON001a_20250605.csv  CON001b_20250424.csv  Joe_20250721.csv
patient_data/results/: a_2025-08-15_stimulus_results.csv  (+7 more)
scripts/: generate_command_audio.py
tests/: __init__.py  conftest.py  test_audio_devices.py  test_audio_stream_manager.py  test_button_controls.py  test_config.py  test_edf_parser.py  test_exceptions.py  test_logging_utils.py  test_oddball_back_to_back.py  test_results_manager.py  test_state_manager.py  test_stims.py  test_tone_generation.py
