[project]
name = "stimulus-software"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "pydub",
    "sounddevice",
    "numpy",
    "mne",
]

[project.optional-dependencies]
dev = ["pytest"]
scripts = ["gtts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

